--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "6a0edddb-460a-40cf-95d2-dcc720814e26"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
